<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:gravity="center_vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developers"
        android:fontFamily="sans-serif-black"
        android:textSize="26dp"
        android:textColor="@color/primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dev1"
            android:fontFamily="sans-serif"
            android:textSize="20dp"
            android:textColor="@color/primary_dark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dev1email"
            android:gravity="right"
            android:textSize="16dp"
            android:textStyle="italic"
            android:textColor="@color/accent"/>
    </LinearLayout>

</LinearLayout>